--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -293,7 +293,7 @@ h6,
     width: 60%;
     height: 80%;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .about-img img:last-child,
@@ -581,3 +581,79 @@ h6,
         width: 30px;
         height: 48px;
     }
+
+    .counter-up{
+        background: url("https://img.freepik.com/photos-gratuite/conception-mise-page-abstraite-fond-rouge-noel-saint-valentin-studio-salle-modele-web-rapport-activite-couleur-degrade-cercle-lisse_1258-53521.jpg?w=1380&t=st=1676905855~exp=1676906455~hmac=8dc31c2b4e6dd5180c3cb9b6190a6ff1901373c5d841e9c7bf2aab19daea9ec5") no-repeat;
+        min-height: 50vh;
+        background-size: cover;
+        background-attachment: fixed;
+        padding: 0 50px;
+        position: relative;
+        display: flex;
+        align-items: center;
+      }
+      .counter-up::before{
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        /*background: rgba(124, 108, 108, 0.8);*/
+      }
+      .counter-up .content{
+        z-index: 1;
+        position: relative;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .counter-up .content .box{
+        border: 1px dashed #fdfdfd;
+        width: calc(25% - 30px);
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: column;
+        padding: 20px;
+      }
+      .content .box .icon{
+        font-size: 48px;
+        color: #e6e6e6;
+      }
+      .content .box .counter{
+        font-size: 50px;
+        font-weight: 500;
+        color: #f2f2f2;
+        font-family: sans-serif;
+      }
+      .content .box .text{
+        font-weight: 400;
+        color: #ccc;
+      }
+      @media screen and (max-width: 1036px) {
+        .counter-up{
+          padding: 50px 50px 0 50px;
+        }
+        .counter-up .content .box{
+          width: calc(50% - 30px);
+          margin-bottom: 50px;
+        }
+      }
+      @media screen and (max-width: 580px) {
+        .counter-up .content .box{
+          width: 100%;
+        }
+      }
+      @media screen and (max-width: 500px) {
+        .wrapper{
+          padding: 20px;
+        }
+        .counter-up{
+          padding: 30px 20px 0 20px;
+        }
+      }
