modified:   public/assets/css/style.css 	new file:   public/assets/img/about/benevo.jpg 	new file:   public/assets/img/about/chronos.jpg 	new file:   public/assets/img/about/coachs.jpg 	new file:   public/assets/img/about/lentrepreneurM.jpg 	modified:   public/assets/img/carousels/jeunesse.jpg 	new file:   public/assets/img/carousels/jeunesse1.jpg 	new file:   public/assets/img/icons/logo.png 	new file:   public/assets/img/icons/logojeunmag.png 	modified:   public/assets/scss/bootstrap.scss 	modified:   resources/views/about.blade.php 	new file:   resources/views/actualite.blade.php 	new file:   resources/views/actualite/coachs_Jos.blade.php 	modified:   resources/views/don.blade.php 	modified:   resources/views/home.blade.php 	modified:   resources/views/layouts/header.blade.php 	modified:   routes/web.php

--- a/public/assets/scss/bootstrap.scss
+++ b/public/assets/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 /******* Customized Bootstrap ********/
 
-$primary: #E40521;
+$primary: #4169E1;
 $light: #6D5753;
 $dark: #675B5D;
 
@@ -8,7 +8,7 @@ $font-family-base: 'Open Sans', sans-serif;
 
 $headings-font-family: 'Teko', sans-serif;
 
-$body-color: #E40521;
+$body-color: #4169E1;
 
 $headings-color: $dark;
 
