--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #E40521;
+    --primary: #4169E1;
     --light: #F8F8F8;
     --dark: #252525;
 }
@@ -37,7 +37,9 @@ h6,
     z-index: 99;
 }
 
-
+.bouton{
+    color:#4169E1;
+}
 /*** Spinner ***/
 #spinner {
     opacity: 0;
@@ -57,6 +59,7 @@ h6,
 .btn {
     font-weight: 500;
     transition: .5s;
+ 
 }
 
 .btn.btn-primary,
@@ -515,7 +518,7 @@ h6,
     margin-bottom: 5px;
     padding: 0;
     text-align: left;
-    color: #777777;
+    color: #78787a;
     font-weight: normal;
     text-transform: capitalize;
     transition: .3s;
