modified:   app/Http/Kernel.php 	modified:   composer.json 	modified:   composer.lock 	modified:   public/assets/css/style.css 	deleted:    public/assets/img/about/event/about-1.jpg 	deleted:    public/assets/img/about/event/about-2.jpg 	new file:   public/assets/img/about/habitat/IMG_0251.JPG 	new file:   public/assets/img/about/habitat/fondaa.png 	deleted:    public/assets/img/carousels/COATCH/_MG_5689.JPG 	deleted:    public/assets/img/carousels/COATCH/_MG_5712.JPG 	deleted:    public/assets/img/carousels/COATCH/_MG_5717.JPG 	deleted:    public/assets/img/carousels/COATCH/_MG_5718.JPG 	deleted:    public/assets/img/carousels/COATCH/_MG_5732.JPG 	deleted:    public/assets/img/carousels/COATCH/_S5A1496.JPG 	deleted:    public/assets/img/carousels/COATCH/_S5A1498.JPG 	deleted:    public/assets/img/carousels/COATCH/_S5A1499.JPG 	deleted:    public/assets/img/carousels/COATCH/_S5A1503.JPG 	deleted:    public/assets/img/carousels/COATCH/_S5A1526.JPG 	deleted:    public/assets/img/carousels/COATCH/_S5A1527.JPG 	deleted:    public/assets/img/carousels/COATCH/_S5A1539.JPG 	new file:   public/assets/img/font/1.png 	new file:   public/assets/img/font/2.png 	new file:   public/assets/img/font/3.png 	new file:   public/assets/img/font/4.png 	new file:   public/assets/img/font/5.png 	new file:   public/assets/img/font/6.png 	deleted:    public/assets/img/prestations/prestation-1.jpg 	deleted:    public/assets/img/prestations/prestation-2.jpg 	deleted:    public/assets/img/prestations/prestation-3.jpg 	deleted:    public/assets/img/prestations/prestation-4.jpg 	deleted:    public/assets/img/projets/cristalys/project-cristalys-1.jpg 	deleted:    public/assets/img/projets/erlion/project-erlion-1.jpg 	deleted:    public/assets/img/projets/event/projet-event-ks1.jpg 	deleted:    public/assets/img/projets/event/projet-event-mariage.jpg 	deleted:    public/assets/img/projets/event/projet-event-sel.jpg 	deleted:    public/assets/img/projets/event/projet-event-shooting.jpg 	deleted:   

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1135,12 +1135,7 @@ h6,
     margin: 0 0 15px 0 0 0;
     padding: 0;
   }
-  /*
-   modification lien
-  */
-  .lien{
-
-  }
+ 
   /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
@@ -1154,7 +1149,7 @@ h6,
 
 .contact .info-item {
   width: 100%;
-  background-color: #4169E1;
+  background-color: #9498ac;
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 10px;
@@ -1164,7 +1159,7 @@ h6,
 .contact .info-item:last-child {
   margin-bottom: 0;
 }
-
+  
 .contact .info-item i {
   font-size: 20px;
   color: #fff;
@@ -1201,7 +1196,7 @@ h6,
 .contact .php-email-form {
   width: 90%;
   height: 100%;
-  background: #4169E1;
+  background: #f0f5f5;
   box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);
   padding: 30px;
   border-radius: 0 20px 20px 0;
@@ -1247,7 +1242,7 @@ h6,
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #E40521;
+  border: 3px solid #1b0d0f;
   border-top-color: #fff;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1278,10 +1273,10 @@ h6,
 
 .contact .php-email-form button[type=submit] {
   background: var(--color-primary);
-  border: 0;
+  border: 10;
   padding: 14px 45px;
-  color: #fff;
-  transition: 0.4s;
+  color: #000000;
+  
   border-radius: 50px;
 }
 
